# Octopus-AI-SecondBrain.github.io

./: .env.example  .env.production.template  .gcloudignore  .gitignore  ACCOUNT_CREATION_FIX.md  ALL_LINKS_FIXED.md  AUTH_FIX.md  CRITICAL_FIX.md  DEMO_ENHANCEMENTS.md  DEMO_MODE_FIX.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  DIGITALOCEAN_DEPLOY.md  Dockerfile  FIXES_APPLIED.md  GCLOUD_DEPLOY.md  GETTING_STARTED.md  GITHUB_PAGES_DEPLOYMENT.md  GITHUB_PAGES_FIX.md  GITHUB_PAGES_FIXED.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_READY.md  MIGRATION_GUIDE.md  MIGRATION_GUIDE_v2.md  NEURAL_MAP_COMPLETE.md  ORG_PAGES_SETUP.md  POSTGRESQL_COMPLETE.md  POSTGRESQL_MIGRATION.md  PRODUCTION_HOSTING_GUIDE.md  PRODUCTION_READY_CHECKLIST.md  PRODUCTION_SETUP.md  PROJECT_SUMMARY.md  README.md  (+16 more)
.do/: app-dockerfile.yaml  app.yaml
.github/workflows/: backend-tests.yml  ci.yml  deploy-backend.yml  deploy-pages.yml  deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_email_to_users.py  d990ce4a7aee_add_tags_to_notes.py
assets/js/: app.js  auth.js  config.js
backend/: .env.example  __init__.py  alembic.ini  main.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: __init__.py  auth.py  healthz.py  jobs.py  notes.py  rag.py
backend/app/core/: __init__.py  logging.py  redis.py  security.py  security_validators.py  settings.py  utils.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py  chunk.py  document.py  embedding.py  ingestion_job.py  note.py  query_log.py  source.py  user.py
backend/app/rag/: __init__.py  caching.py  interfaces.py
backend/app/rag/embedders/: __init__.py  cached_embedder.py  sentence_transformer.py
backend/app/rag/generators/: __init__.py  openai_generator.py
backend/app/rag/loaders/: __init__.py  image_loader.py  pdf_loader.py  text_loader.py  video_loader.py
backend/app/rag/retrievers/: __init__.py  hybrid_retriever.py  semantic_retriever.py
backend/app/rag/stores/: __init__.py  pgvector_store.py
backend/app/schemas/: __init__.py  auth.py  common.py  job.py  notes.py  rag.py
backend/app/services/: __init__.py  job_queue.py  rag_service.py
backend/config/: config.py  settings.py
backend/core/: embeddings.py  logging.py  security.py
backend/map-frontend/: README.md  auth-test.html  auth.css  clear-test.html  config.js  debug.html  index.html  manual-test.html  styles.css
backend/models/: db.py  note.py  user.py
backend/routes/: analytics.py  auth.py  map.py  notes.py  search.py
backend/services/: vector_store.py
config/: local.env
docs/: NEURAL_MAP_DEMO.md  PROFESSIONAL_GUIDELINES.md  README.md  api.md  app.html  demo-app.html  demo-neural-map.html  demo.html  demo_notes.js  development.md  index.html  script.js  styles.css
frontend/: .commitlintrc.js  .env.development  .env.example  .env.production  .eslintrc.cjs  .lighthouserc.json  .prettierignore  Dockerfile  auth.html  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.js
frontend/assets/js/: app.js  auth.js  config.js
frontend/public/: 404.html  manifest.json  offline.html  robots.txt  service-worker.js  sitemap.xml
frontend/src/: App.jsx  index.css  vite-env.d.ts
frontend/src/components/: BulkImportModal.jsx  HealthIndicator.jsx  KeyboardShortcutsModal.jsx  OctopusIcon.jsx  OctopusLoader.jsx  RichTextEditor.jsx  TagInput.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useForceGraphConfig.js  useKeyboardShortcuts.js
infra/: Dockerfile.backend  Dockerfile.cloudrun  Dockerfile.frontend  docker-compose.yml  init-db.sql
migrations/: 001_add_is_admin.sql
scripts/: migrate_add_admin.py  predeploy.py  serve-frontend.sh  setup.sh  setup_demo_account.py  start.sh  test-landing-page.sh  validate.py
scripts/demo/: create_demo_notes.py
tests/: test_app.py
(+21 files in other folders)
